--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
                             <span class="tag">Red Team</span>
                         </div>
                     </div>
+                    <div class="project-item">
+                        <div class="project-header">
+                            <h3><a href="https://github.com/Coff0xc/AutoRedTeam-Orchestrator"
+                                    target="_blank">AutoRedTeam-Orchestrator</a></h3>
+                            <span class="project-icon">git</span>
+                        </div>
+                        <p>AI-driven fully automated red team penetration testing agent. Intelligently analyzes targets
+                            and executes tests.</p>
+                        <div class="tags-container">
+                            <span class="tag">Python</span>
+                            <span class="tag">AI</span>
+                            <span class="tag">Red Team</span>
+                            <span class="tag">Agent</span>
+                        </div>
+                    </div>
                 </div>
             </section>
 
