--- a/index.html
+++ b/index.html
@@ -48,6 +48,47 @@
                 </div>
             </section>
 
+            <!-- SEO Content (Hidden from view but visible to crawlers) -->
+            <div class="seo-content" style="display:none;">
+                <h1>Coff0xc - Web Security Researcher & CTF Player</h1>
+                <p>User: coff0xc (uid=1000)</p>
+                <p>Role: Web Security Researcher / CTF Player</p>
+                <p>Focus: Automated Penetration Testing, AI-Driven Traffic Analysis, Embedded Security (STM32)</p>
+
+                <h2>Projects</h2>
+                <ul>
+                    <li>
+                        <h3>AI-Based HTTP Traffic Analysis Agent</h3>
+                        <p>Architecture: Dual-layer judgment system (L1: Traffic Analysis, L2: Security Verdict). Model:
+                            Self-trained proprietary model. Goal: Automated detection of malicious HTTP
+                            requests/responses.</p>
+                    </li>
+                    <li>
+                        <h3>STM32 Abnormal Vibration Monitoring System</h3>
+                        <p>Core: STM32 Microcontroller + Isolation Forest Algorithm. Function: Real-time equipment
+                            anomaly detection on edge devices.</p>
+                    </li>
+                </ul>
+
+                <h2>Contact</h2>
+                <p>Email: Coff0xc@protonmail.com</p>
+            </div>
+            <noscript>
+                <h1>Coff0xc - Web Security Researcher & CTF Player</h1>
+                <p>Welcome to my terminal-style portfolio. Since you have JavaScript disabled, here is the plain text
+                    version.</p>
+                <h2>Who am I?</h2>
+                <p>I am a Web Security Researcher and CTF Player based in China. My focus areas include Automated
+                    Penetration Testing, AI-Driven Traffic Analysis, and Embedded Security.</p>
+                <h2>Projects</h2>
+                <ul>
+                    <li>AI-Based HTTP Traffic Analysis Agent</li>
+                    <li>STM32 Abnormal Vibration Monitoring System</li>
+                </ul>
+                <h2>Contact</h2>
+                <p>Email: Coff0xc@protonmail.com</p>
+            </noscript>
+
             <section id="projects" class="fade-in">
                 <h2><span class="section-marker">#</span> Projects</h2>
                 <div class="project-list">
