feat: add 2026 OKR tracking system

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; object-src 'none';">
     <title>Coff0xc | Security Analysis Engineer</title>
     <!-- Import JetBrains Mono for that premium coding feel -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,6 +24,7 @@
                 <ul>
                     <li><a href="#home" class="nav-link">[Home]</a></li>
                     <li><a href="#projects" class="nav-link">[Projects]</a></li>
+                    <li><a href="#okr" class="nav-link">[OKR]</a></li>
                     <li><a href="#about" class="nav-link">[About]</a></li>
                 </ul>
             </nav>
@@ -121,6 +124,11 @@
                         </div>
                     </div>
                 </div>
+            </section>
+
+            <section id="okr" class="fade-in">
+                <h2><span class="section-marker">#</span> 2026 OKR</h2>
+                <div id="okr-container" class="okr-grid"></div>
             </section>
 
             <section id="about" class="fade-in">
